// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Molecules/Radio passes the snapshot test for basic setup 1`] = `
<View
  accessibilityLabel="Check me!"
  accessibilityRole="radio"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": false,
    }
  }
  accessible={true}
  direction="horizontal"
  spacing="xs"
  style={
    Object {
      "alignSelf": "flex-start",
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginVertical": 4,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 8,
      }
    }
  >
    <View
      accessibilityHint=""
      accessibilityLabel="Press me!"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      checkedBackgroundColor="primary.500"
      checkedBorderColor="primary.500"
      errorBorderColor="danger.500"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#EDF1F7",
            "borderColor": "#EDF1F7",
            "borderRadius": "50%",
            "borderWidth": 2,
            "display": "flex",
            "height": 24,
            "justifyContent": "center",
            "padding": 5,
            "width": 24,
          },
          Object {
            "backgroundColor": "#EDF1F7",
            "opacity": undefined,
          },
        ]
      }
    >
      <View
        checkedBackgroundColor="neutral.50"
        style={
          Object {
            "backgroundColor": "#EDF1F7",
            "borderRadius": "50%",
            "display": "flex",
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "#1A2138",
          "display": "flex",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontWeight": "400",
          "lineHeight": 25.299999999999997,
        }
      }
      variant="p2"
    >
      Check me!
    </Text>
  </View>
</View>
`;

exports[`Molecules/Radio passes the snapshot test for different color schemes 1`] = `
Array [
  <View
    accessibilityLabel="Primary Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#EDF1F7",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Primary Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Secondary Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="secondary.500"
        checkedBorderColor="secondary.500"
        errorBorderColor="danger.500"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#EDF1F7",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Secondary Radio
      </Text>
    </View>
  </View>,
]
`;

exports[`Molecules/Radio passes the snapshot test for different sizes 1`] = `
Array [
  <View
    accessibilityLabel="Small Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#EDF1F7",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 18,
              "justifyContent": "center",
              "padding": 3,
              "width": 18,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Small Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Regular Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#EDF1F7",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Regular Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Large Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#EDF1F7",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 30,
              "justifyContent": "center",
              "padding": 7,
              "width": 30,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 18.4,
            "fontWeight": "400",
            "lineHeight": 27.599999999999998,
          }
        }
        variant="p1"
      >
        Large Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Extra Large Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#EDF1F7",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 36,
              "justifyContent": "center",
              "padding": 9,
              "width": 36,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 18.4,
            "fontWeight": "400",
            "lineHeight": 27.599999999999998,
          }
        }
        variant="p1"
      >
        Extra Large Radio
      </Text>
    </View>
  </View>,
]
`;

exports[`Molecules/Radio passes the snapshot test for different variants 1`] = `
Array [
  <View
    accessibilityLabel="Filled Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#EDF1F7",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
        variant="filled"
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Filled Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Outline Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor={
          Object {
            "dark": "neutral.800",
            "light": "neutral.50",
          }
        }
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#C5CEE0",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#FFFFFF",
              "opacity": undefined,
            },
          ]
        }
        variant="outline"
      >
        <View
          checkedBackgroundColor="primary.500"
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Outline Radio
      </Text>
    </View>
  </View>,
]
`;

exports[`Molecules/Radio passes the snapshot test when in a checked state 1`] = `
Array [
  <View
    accessibilityLabel="Checked Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": true,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        isChecked={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#6A7BFF",
              "borderColor": "#6A7BFF",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#6A7BFF",
              "opacity": undefined,
            },
          ]
        }
        variant="filled"
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#FFFFFF",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Checked Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Checked Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": true,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor={
          Object {
            "dark": "neutral.800",
            "light": "neutral.50",
          }
        }
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        isChecked={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#FFFFFF",
              "borderColor": "#6A7BFF",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#FFFFFF",
              "opacity": undefined,
            },
          ]
        }
        variant="outline"
      >
        <View
          checkedBackgroundColor="primary.500"
          style={
            Object {
              "backgroundColor": "#6A7BFF",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Checked Radio
      </Text>
    </View>
  </View>,
]
`;

exports[`Molecules/Radio passes the snapshot test when in an error state 1`] = `
Array [
  <View
    accessibilityLabel="Error Radio"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        focusable={true}
        isInvalid={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#FF4B42",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Error Radio
      </Text>
    </View>
  </View>,
  <View
    accessibilityLabel="Error Radio with message"
    accessibilityRole="radio"
    accessibilityState={
      Object {
        "checked": undefined,
        "disabled": false,
      }
    }
    accessible={true}
    direction="horizontal"
    spacing="xs"
    style={
      Object {
        "alignSelf": "flex-start",
        "display": "flex",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "marginVertical": 4,
        "opacity": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
          "marginRight": 8,
        }
      }
    >
      <View
        accessibilityHint=""
        accessibilityLabel="Press me!"
        accessibilityRole="button"
        accessibilityState={
          Object {
            "disabled": false,
          }
        }
        accessible={true}
        checkedBackgroundColor="primary.500"
        checkedBorderColor="primary.500"
        errorBorderColor="danger.500"
        errorMessage="This is an error message!"
        focusable={true}
        isInvalid={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignItems": "center",
              "alignSelf": "center",
              "backgroundColor": "#EDF1F7",
              "borderColor": "#FF4B42",
              "borderRadius": "50%",
              "borderWidth": 2,
              "display": "flex",
              "height": 24,
              "justifyContent": "center",
              "padding": 5,
              "width": 24,
            },
            Object {
              "backgroundColor": "#EDF1F7",
              "opacity": undefined,
            },
          ]
        }
      >
        <View
          checkedBackgroundColor="neutral.50"
          style={
            Object {
              "backgroundColor": "#EDF1F7",
              "borderRadius": "50%",
              "display": "flex",
              "height": "100%",
              "width": "100%",
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "alignSelf": "stretch",
          "display": "flex",
          "flexDirection": "row",
        }
      }
    >
      <Text
        accessibilityRole="text"
        accessible={true}
        allowFontScaling={true}
        style={
          Object {
            "alignSelf": "center",
            "color": "#1A2138",
            "display": "flex",
            "fontFamily": "Poppins-Regular",
            "fontSize": 16.099999999999998,
            "fontWeight": "400",
            "lineHeight": 25.299999999999997,
          }
        }
        variant="p2"
      >
        Error Radio with message
      </Text>
    </View>
  </View>,
  <Text
    accessibilityRole="text"
    accessible={true}
    allowFontScaling={true}
    style={
      Object {
        "color": "#FF4B42",
        "display": "flex",
        "fontFamily": "Poppins-Regular",
        "fontSize": 13.799999999999999,
        "fontWeight": "400",
        "lineHeight": 23,
        "marginBottom": 4,
      }
    }
    variant="caption"
  >
    This is an error message!
  </Text>,
]
`;

exports[`Molecules/Radio passes the snapshot test when using style props 1`] = `
<View
  accessibilityLabel="Button press"
  accessibilityRole="radio"
  accessibilityState={
    Object {
      "checked": undefined,
      "disabled": false,
    }
  }
  accessible={true}
  direction="horizontal"
  spacing="xs"
  style={
    Object {
      "alignSelf": "flex-start",
      "backgroundColor": "#6A7BFF",
      "borderColor": "#C5CEE0",
      "borderWidth": 2,
      "display": "flex",
      "flexDirection": "row",
      "flexWrap": "wrap",
      "marginVertical": 4,
      "opacity": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
        "marginRight": 8,
      }
    }
  >
    <View
      accessibilityHint=""
      accessibilityLabel="Press me!"
      accessibilityRole="button"
      accessibilityState={
        Object {
          "disabled": false,
        }
      }
      accessible={true}
      checkedBackgroundColor="primary.500"
      checkedBorderColor="primary.500"
      errorBorderColor="danger.500"
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "alignSelf": "center",
            "backgroundColor": "#EDF1F7",
            "borderColor": "#EDF1F7",
            "borderRadius": "50%",
            "borderWidth": 2,
            "display": "flex",
            "height": 24,
            "justifyContent": "center",
            "padding": 5,
            "width": 24,
          },
          Object {
            "backgroundColor": "#EDF1F7",
            "opacity": undefined,
          },
        ]
      }
    >
      <View
        checkedBackgroundColor="neutral.50"
        style={
          Object {
            "backgroundColor": "#EDF1F7",
            "borderRadius": "50%",
            "display": "flex",
            "height": "100%",
            "width": "100%",
          }
        }
      />
    </View>
  </View>
  <View
    style={
      Object {
        "alignSelf": "stretch",
        "display": "flex",
        "flexDirection": "row",
      }
    }
  >
    <Text
      accessibilityRole="text"
      accessible={true}
      allowFontScaling={true}
      style={
        Object {
          "alignSelf": "center",
          "color": "#1A2138",
          "display": "flex",
          "fontFamily": "Poppins-Regular",
          "fontSize": 16.099999999999998,
          "fontWeight": "400",
          "lineHeight": 25.299999999999997,
        }
      }
      variant="p2"
    >
      Button press
    </Text>
  </View>
</View>
`;
